<resources>
    <string name="app_name">WA GB Tool\'s</string>
    <string name="folder_statuses">WhatsAppStatusSaver</string>
    <string name="image">Images</string>
    <string name="video">Videos</string>
    <string name="whatsapp_status">Whatsapp Status</string>
    <string name="oops">Oops! not Status Found 😔</string>
    <string name="allow">2. Click on <b> Allow </b></string>
    <string name="getit">Get it</string>
    <string name="close">Close</string>
    <string name="getwhatsappstatus">Get WhatsApp Status</string>
    <string name="nextscreen">1. Next Screen -> Click on <b> Allow to access <br /> &#x20; &#x20; &#x20;this folder </b></string>
    <string name="select_country">Select a county</string>
    <string name="no_result_found">Results not found</string>
    <string name="save">Save</string>
    <string name="editProfile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="name">Name:-</string>
    <string name="photo">Photo:-</string>
    <string name="enterYourName">Enter your name</string>
    <string name="seenStatus">Seen Status</string>
    <string name="online">Online:-</string>
    <string name="typing">Typing:-</string>
    <string name="status">Status:-</string>
    <string name="enterYourStatus">Enter your status</string>
    <string name="search_hint">Search...</string>
    <string name="delete">Delete</string>
</resources>