<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/getwhatsappstatus"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nextscreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt1" />

        <ImageView
            android:id="@+id/iv_guide"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/wa_folder_access_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt2" />

        <Button
            android:id="@+id/btn_scanner"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/getit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_guide" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textSize="14dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_scanner" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>