<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_rly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/round_corner"
    android:layout_marginTop="65dp"
    android:layout_marginBottom="65dp"
    android:layout_marginLeft="26dp"
    android:layout_marginRight="26dp">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/select_country"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/secondary_text_light"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/search_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_tv"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:background="@drawable/bg_edit_text_round"
        android:hint="@string/search_hint"
        android:imeOptions="flagNoExtractUi"
        android:maxLines="1"
        android:paddingLeft="13dp"
        android:paddingTop="6.50dp"
        android:paddingBottom="6.50dp"
        android:singleLine="true"
        android:textColor="@android:color/primary_text_light_nodisable" />

    <!--<android.support.v7.widget.RecyclerView-->
    <!--android:id="@+id/country_dialog_rv"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_below="@+id/search_edt"-->
    <!--android:dividerHeight="2dp"-->
    <!--/>-->

    <ListView
        android:id="@+id/country_dialog_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_edt"
        android:dividerHeight="2dp"
        android:paddingTop="6.50dp"/>

    <TextView
        android:id="@+id/no_result_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/no_result_found"
        android:textColor="@android:color/primary_text_light"
        android:visibility="gone"
        />

</RelativeLayout>
