<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/top"
                android:layout_width="fill_parent"
                android:layout_height="80dp">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarmain"
                    android:layout_width="fill_parent"
                    android:layout_height="80dp"
                    android:background="@color/fcolorPrimary"
                    app:titleTextColor="#ffffffff">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/menu"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerVertical="true"

                            android:gravity="center|start">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:padding="15dp"
                                android:src="@drawable/back_put" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/toolbar_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/menu"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="20dp"
                            android:text="@string/editProfile"
                            android:textColor="#ffffffff"
                            android:textSize="20sp" />
                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_profileSide"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="70dp"
                    android:background="#ffe5e5e5"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:text="@string/profile"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="140dp"
                    android:background="@color/white"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        android:weightSum="2.0">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.3"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/name"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.5"
                            android:gravity="center_vertical">

                            <EditText
                                android:id="@+id/user_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/enterYourName"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        android:weightSum="2.0">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.3"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/photo"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.5"
                            android:gravity="center_vertical">

                            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                                android:id="@+id/user_profilepic"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/user_photo"
                                app:civ_border_color="#ff000000"
                                app:civ_border_width="0dp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_lastseen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_profileSide"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="70dp"
                    android:background="#ffe5e5e5"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:text="@string/seenStatus"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="210dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        android:weightSum="2.0">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.3"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/online"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.7"
                            android:gravity="center|end">

                            <Switch
                                android:id="@+id/user_onlile"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="25dp"/>
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        android:weightSum="2.0">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.3"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/typing"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.7"
                            android:gravity="center|end">

                            <Switch
                                android:id="@+id/user_typing"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="25dp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        android:weightSum="2.0">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.3"
                            android:gravity="center_vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:text="@string/status"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.5"
                            android:gravity="center_vertical">

                            <EditText
                                android:id="@+id/user_status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/enterYourStatus"
                                android:textColor="@color/black"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_lastseen"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edit_userProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:paddingRight="20dp"
                    android:text="@string/save"
                    android:textColor="@color/fcolorPrimary"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/delete_userProfile"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toStartOf="@+id/edit_userProfile"
                    android:gravity="end"
                    android:paddingRight="30dp"
                    android:text="@string/delete"
                    android:textColor="#ffea1616"
                    android:textSize="23sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>